# test_nn_template

./: .gitignore  env.yaml  mkdocs.yml  pyproject.toml
.github/workflows/: publish.yml  test_suite.yml
0.0/: 404.html  index.html
0.0/search/: search_index.json
conf/: default.yaml
conf/data/: default.yaml
conf/model/: default.yaml
conf/optim/: default.yaml
conf/train/: default.yaml
docs/: index.md
notebooks/: dimentionality reduction.ipynb
src/test_nn_template/: run.py
src/test_nn_template/data/: datamodule.py  dataset.py  export.py
src/test_nn_template/modules/: losses.py  module.py
src/test_nn_template/modules/models/: attention.py  ffn.py  siamese.py  transformer.py
src/test_nn_template/pl_modules/: pl_module.py
src/test_nn_template/ui/: run.py
tests/: conftest.py  test_checkpoint.py  test_configuration.py  test_resume.py
